Fixet layout bugs

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,7 +1,5 @@
 
 .container
-    width: 100vw
-    height: 100vh
     display: flex
     justify-content: center
     align-items: center
@@ -11,19 +9,17 @@
     position: relative
     width: 800px
     height: 800px
-    display: flex
-    justify-content: center
-    align-items: center
     &__activator
         position: absolute
         z-index: 1000
-        background: rgba(0,0,0,0.4)
+        background: rgba(255,255,255,0.7)
         display: flex
         justify-content: center
         align-items: center
-        color: #fff
+        color: #000
+        border-radius: 3%
+        text-align: center
     &__element
-        border-radius: 50%
         position: absolute
         object-fit: cover
         img
@@ -43,6 +39,9 @@
         &__activator, &__element
             width: 19.83%
             height: 28.33%
+        &__activator
+            display: flex
+            align-items: center
 
 
 @media(max-width: 992px)
